crates/clapfig/tests/ui/derive/unknown_field_attr.stderr
error: unsupported #[clapfig(...)] field attribute: `nope`. Supported: default, env, rename, value, optional, allowed
 --> tests/ui/derive/unknown_field_attr.rs:5:15
  |
5 |     #[clapfig(nope = 1)]
  |               ^^^^
