crates/clapfig/tests/ui/derive/unknown_field_attr.rs
use clapfig::Schema;

#[derive(Schema)]
struct Bad {
    #[clapfig(nope = 1)]
    field: String,
}

fn main() {}
